--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: # filename of a logo image that has been placed into your images directory
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Ayush Choudhary
-  avatar: bio-photo.jpg
+  avatar: photo.jpg
   bio: "Grad student @NC State."
   email: achoudh6@ncsu.edu
   # Do not include the @ symbol in your Twitter username
