--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Ayush Choudhary
   avatar: photo.jpg
-  bio: "Grad student @NC State."
+  bio: "Learner @NC State."
   email: achoudh6@ncsu.edu
   # Do not include the @ symbol in your Twitter username
   twitter: achoudh6
