--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,14 +2,20 @@
 - title: Home
   url: /
 
-- title: Presentations
-  url: /presentations/
-
 - title: Resume
   url: /resume/
   
-- title: Projects
+- title: Courses
+  url: /courses/
+  
+  - title: Projects
   url: /myprojects/
+  
+  - title: Other Interests
+  url: /other/
+  
+- title: Presentations
+  url: /presentations/
 
 - title: Blog
   url: /blog/
